project(base_unittest)
set(SRC debug_util_unittest.cc)
set(SRC1 lazy_instace_unittest.cc)
link_directories(../lib)
add_executable(debug_string_unittest ${SRC})
add_executable(lazy_instace_unittest ${SRC1})
target_link_libraries(debug_string_unittest base)
target_link_libraries(lazy_instace_unittest base)
set(CMAKE_EXE_LINKER_FLAGS "-lpthread -lrt")
