project(base_unittest)
set(SRC debug_util_unittest.cc)
set(SRC1 lazy_instace_unittest.cc)
set(SRC2 counter_unittest.cc)
link_directories(../lib)
link_directories(../../third_part/testing/gtest/lib/)
add_executable(debug_string_unittest ${SRC})
add_executable(lazy_instace_unittest ${SRC1})
add_executable(counter_unittest ${SRC2})
target_link_libraries(debug_string_unittest base)
target_link_libraries(lazy_instace_unittest base)
target_link_libraries(counter_unittest base gtest)
set(CMAKE_EXE_LINKER_FLAGS "-lpthread -lrt")
