set(SRC trie_tree_unittest.cc)
set(SRC_1 trie_tree_unit_unittest.cc)
link_directories(../../../base/lib)
link_directories(../../testing/gtest/lib/)
add_executable(trie_unit ${SRC})
add_executable(trie_union_unit ${SRC_1})
target_link_libraries(trie_unit base gtest)
target_link_libraries(trie_union_unit base)
SET(CMAKE_EXE_LINKER_FLAGS "-lpthread -lrt")
